Fixed MC text sizing on tiny screens, fixed spacing issue on nav for ipad

--- a/mission-ceramics/src/styles/Home.scss
+++ b/mission-ceramics/src/styles/Home.scss
@@ -22,6 +22,7 @@ span.home-step {
 
 // HEADER
 .mobile-header {
+  padding-top: 10px;
   display: none;
 }
 
